@@ -1,3 +1,8 @@
+2006-10-13  Kouhei Sutou <kou@cozmixng.org>
+
+	* rsvg-cairo-clip.c: Fix bug with scaling + clipping reported on
+	cairo-devel.
+	
 2006-09-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* configure.in: Build the mozilla plugin using libxul in
